# Gauntlet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  _basaltlabs  pyproject.toml  requirements.txt
api/: index.py  leaderboard.py
assets/: demo-terminal.txt  demo.tape  tui-demo.tape
gauntlet/: __init__.py
gauntlet/cli/: app.py  ci_output.py  display.py  report_html.py  tui.py  tui_report.py
gauntlet/core/: benchmark_history.py  benchmarks.py  client.py  community_probes.py  config.py  discover.py  hardware_tiers.py  health_judge.py  health_runner.py  judge.py  leaderboard.py  metrics.py  module_runner.py  prediction.py  probe_gen.py  prompt_classifier.py  prompt_pool.py  recommendation.py  report.py  runner.py  scorer.py  statistics.py  submit.py  system_info.py  trust_score.py  update_check.py  verification.py
gauntlet/core/modules/: __init__.py  ambiguity.py  anchoring_bias.py  base.py  confidence_calibration.py  consistency.py  contamination.py  context.py  framing_effect.py  hallucination.py  health_check.py  instruction.py  instruction_decay.py  layer_sensitivity.py  logical_consistency.py  perplexity_baseline.py  prompt_injection.py  refusal.py  safety.py  sycophancy.py  sycophancy_gradient.py  temporal_coherence.py
gauntlet/core/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  lmstudio.py  ollama.py  openai_provider.py
gauntlet/core/swe/: __init__.py  container.py  runner.py  sandbox.py  test_packs.py
gauntlet/dashboard/: server.py
gauntlet/dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
gauntlet/dashboard/frontend/src/: App.jsx  index.css
gauntlet/dashboard/frontend/src/components/: Arena.jsx  BenchmarkPanel.jsx  CommunityPanel.jsx  ControlPanel.jsx  GraphView.jsx  HealthCheckPanel.jsx  HelpPanel.jsx  Leaderboard.jsx  ModelCard.jsx  QualityRadar.jsx  RaceTrack.jsx  ScoringBreakdown.jsx  SpeedChart.jsx
gauntlet/dashboard/frontend/src/hooks/: useWebSocket.js
gauntlet/dashboard/frontend/src/lib/: animations.js
gauntlet/examples/: community_probe_example.yaml
gauntlet/mcp/: __init__.py  domain_probes.py  history_store.py  leaderboard_store.py  probes.py  runner.py  server.py  session_store.py
tests/: conftest.py  test_api_endpoints.py  test_attestation.py  test_certification.py  test_ci_output.py  test_domain_probes.py  test_hardware_tiers.py  test_layer_sensitivity.py  test_layer_sensitivity_v2.py  test_lmstudio.py  test_mcp_runner.py  test_module_versioning.py  test_modules_base.py  test_perplexity_baseline.py  test_prediction.py  test_probe_gen.py  test_prompt_classifier.py  test_prompt_pool.py  test_quant_method.py  test_report.py  test_scorer.py  test_statistics.py  test_submit.py  test_system_info.py  test_tier_leaderboard.py  test_trust_score.py  test_verification.py
