[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gauntlet-cli"
version = "1.3.0"
description = "Behavioral reliability under pressure. Test how LLMs behave when things get hard."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BasaltLabs", email = "hello@basaltlabs.app"}
]
keywords = ["llm", "benchmark", "behavioral", "reliability", "ollama", "local-ai", "sycophancy", "hallucination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=12.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
gauntlet = "gauntlet.cli.app:entry"

[project.urls]
Homepage = "https://github.com/Basaltlabs-app/Gauntlet"
Repository = "https://github.com/Basaltlabs-app/Gauntlet"
Issues = "https://github.com/Basaltlabs-app/Gauntlet/issues"

[tool.setuptools.packages.find]
include = ["gauntlet*"]

[tool.setuptools.package-data]
gauntlet = [
    "dashboard/frontend/dist/*",
    "dashboard/frontend/dist/**/*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
